# libpict

./: CMakeLists.txt  Doxyfile  README.md  cl__backend_8h.html  cl__backend_8h.js  cl__backend_8h_source.html  cl__bind_8h.html  cl__bind_8h_source.html  cl__data_8h.html  cl__data_8h.js  cl__data_8h_source.html  cl__ops_8h.html  cl__ops_8h.js  cl__ops_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  group__Backend.html  group__Backend.js  group__Data.html  group__Data.js  group__Operations.html  group__Operations.js  index.html  index.js  libpict_8h.html  libpict_8h.js  libpict_8h_source.html  md_docs_2ml.html  navtreedata.js  navtreeindex0.js  pages.html  ptp_8h.html  ptp_8h.js  ptp_8h_source.html  structBindReq.html  structPtpArray-members.html  structPtpArray.html  structPtpCanonEvent.html  (+30 more)
.github/workflows/: build.yml
examples/: directprint.c  eos.c  evtest.c  info.c  live.c  ml.c  optest.c  pktest.c  storage.c  usb.c  usb.lua  wifi.c  wintest.c  x.js
search/: all_0.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  enums_0.js  enumvalues_0.js  files_1.js  functions_0.js  functions_1.js  pages_1.js  searchdata.js  variables_2.js  variables_3.js  variables_5.js  variables_7.js  variables_8.js  variables_a.js
src/: bind.c  camlib.h  canon.c  canon_adv.c  cl_backend.h  cl_bind.h  cl_data.h  cl_ops.h  cl_stuff.h  cli.c  conv.c  data.c  dec.c  enum_dump.c  generic.c  ip.c  lib.c  libpict.h  libusb.c  libwpd.c  ml.c  mutex_err.h  no_ip.c  no_usb.c  operations.c  packet.c  ptp.h  stuff.c  transport.c
src/js/: libpict.d.ts  quickjs.c
src/lua/: doc.lua  libpict_lua.h  lua.c
test/: data.c  test.c
